# ramem

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
configs/evaluation/: gemma_1b_t4.yaml  mlqa_es_analysis.yaml  mlqa_es_external_dev.yaml  xquad_es_final.yaml
configs/export/: gemma_1b_ramem.yaml
configs/hardware/: edge.yaml  lightning_l4.yaml  lightning_t4.yaml
configs/inference/: gemma_1b_ramem.yaml
configs/models/: gemma_1b.yaml  gemma_270m.yaml
configs/retrieval/: baseline.yaml  e02_miracl_pilot.yaml  e02_miracl_pilot_cpu.yaml
configs/training/: gemma_1b_grounded_qlora.yaml  gemma_1b_smoke_qlora.yaml  gemma_1b_t4_qlora.yaml
data/: datasets_manifest.yaml
docs/: EXTERNAL_EVALUATION.md  HANDOFF.md  LIGHTNING_RUNBOOK.md  architecture.md  data_governance.md  experiment_protocol.md  next_experiments.md  resume-fase1.md  retrieval_evaluation.md
docs/adr/: 0001-explicit-state-machine.md  0002-offline-retrieval-baseline.md  0003-deny-by-default-datasets.md
experiments/: registry.yaml
scripts/evaluate/: README.md  lightning_t4_compare.sh  lightning_t4_external_dev.sh  lightning_t4_final_holdout.sh
scripts/export/: README.md  lightning_merge_adapter.sh
scripts/train/: README.md  lightning_t4_smoke.sh  lightning_t4_train.sh
src/ramem/: __init__.py  config.py  environment.py
src/ramem/api/: __init__.py
src/ramem/cli/: app.py
src/ramem/domain/: __init__.py  contracts.py  models.py
src/ramem/evaluation/: __init__.py  analysis.py  datasets.py  generation.py  prepare.py  retrieval.py
src/ramem/generation/: __init__.py  context.py  transformers.py
src/ramem/memory/: __init__.py  policy.py
src/ramem/orchestration/: __init__.py  pipeline.py
src/ramem/retrieval/: __init__.py  hybrid.py  ingest.py  store.py  vectors.py
src/ramem/routing/: __init__.py  rules.py
src/ramem/telemetry/: __init__.py  manifest.py  trace.py
src/ramem/training/: __init__.py  data.py  export.py  prepare.py  train.py
src/ramem/verification/: __init__.py  rules.py
tests/unit/: test_config.py  test_data_download_policy.py  test_datasets.py  test_environment.py  test_evaluation_analysis.py  test_export.py  test_external_prepare.py  test_generation_evaluation.py  test_retrieval_evaluation.py  test_training.py
