[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ramem"
version = "0.1.0"
description = "Local-first recoverable memory for small language models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "pydantic>=2.8,<3",
  "python-dotenv>=1.1,<2",
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0,<7",
]
training = [
  "accelerate>=1.10,<2",
  "bitsandbytes>=0.47,<1",
  "datasets>=4.0,<5",
  "huggingface-hub>=0.34,<2",
  "peft>=0.17,<1",
  "safetensors>=0.5,<1",
  "torch==2.5.1",
  "transformers>=4.56,<6",
  "trl>=0.23,<1",
]

[project.scripts]
ramem = "ramem.cli.app:app"
ramem-download = "ramem.training.data:main"
ramem-prepare = "ramem.training.prepare:main"
ramem-train = "ramem.training.train:main"
ramem-evaluate = "ramem.evaluation.generation:main"
ramem-export = "ramem.training.export:main"
ramem-prepare-external = "ramem.evaluation.prepare:main"
ramem-analyze-evaluation = "ramem.evaluation.analysis:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ramem"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ramem"]
warn_unreachable = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
